[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Images/Enemies/skeleton/DRAW/down/body.png" type="Texture" id=1]
[ext_resource path="res://World/Enemies/Skeleton.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Magic/lightning/Shock_Med.png" type="Texture" id=3]
[ext_resource path="res://World/Enemies/AttachedStates/EnemyPoisonState.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Enemies/AttachedStates/EnemyStunnedState.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Enemies/AttachedStates/EnemyFrozenState.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=10]
radius = 5.99999
height = 8.00001

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 3 )
region = Rect2( 68, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 3 )
region = Rect2( 136, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 3 )
region = Rect2( 170, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 3 )
region = Rect2( 204, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 3 )
region = Rect2( 238, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 3 )
region = Rect2( 272, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 3 )
region = Rect2( 306, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 3 )
region = Rect2( 340, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 3 )
region = Rect2( 374, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 3 )
region = Rect2( 408, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 3 )
region = Rect2( 442, 0, 34, 34 )

[sub_resource type="SpriteFrames" id=182]
animations = [ {
"frames": [ SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=165]
radius = 24.0
height = 4.0

[sub_resource type="Animation" id=149]
length = 0.001

[sub_resource type="Animation" id=150]
resource_name = "hit"
length = 0.25
step = 0.05

[sub_resource type="CircleShape2D" id=164]
radius = 194.003

[sub_resource type="Animation" id=166]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=167]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=185]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 34, 34 )

[sub_resource type="AtlasTexture" id=186]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 34, 34 )

[sub_resource type="SpriteFrames" id=187]
animations = [ {
"frames": [ SubResource( 183 ), SubResource( 184 ), SubResource( 185 ), SubResource( 186 ) ],
"loop": true,
"name": "draw down",
"speed": 5.0
} ]

[node name="Skeleton" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )

[node name="EnemyStunnedState" parent="." instance=ExtResource( 6 )]

[node name="EnemyPoisonState" parent="." instance=ExtResource( 5 )]

[node name="EnemyFrozenState" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 10 )

[node name="Electricity" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -17 )
scale = Vector2( 2, 2 )
frames = SubResource( 182 )
frame = 2
playing = true

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 262400
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, -20 )
shape = SubResource( 165 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HurtBox"]
anims/RESET = SubResource( 149 )
anims/hit = SubResource( 150 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 164 )

[node name="ShootDirection" type="Node2D" parent="."]
position = Vector2( 0, -33 )

[node name="Position2D" type="Position2D" parent="ShootDirection"]
position = Vector2( 45, 0 )

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="ChaseTimer" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="KnockbackTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 10.0
path_max_distance = 20.0
avoidance_enabled = true
max_speed = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 166 )
anims/death = SubResource( 167 )

[node name="SkeletonSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
frames = SubResource( 187 )
animation = "draw down"

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timers/KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
